Fixed z-index on explore/mobile

--- a/root/styles/explore.scss
+++ b/root/styles/explore.scss
@@ -27,12 +27,9 @@ html, body {
     max-width: 70%;;
     height: auto;
     margin: 0 auto;
-
-    z-index: 20;
 }
 
 .auction-card-modal {
-    z-index: 2;
     width: 60%;
     height: auto;
     margin: 20vh auto;
@@ -63,7 +60,6 @@ html, body {
     transition: 1s ease-out;
     cursor: pointer;
 
-    z-index: 20;
 
     img {
         margin: 0 auto;
@@ -78,10 +74,6 @@ html, body {
         color: $main-colour;
         text-shadow: 1px 1px $highlight-colour;
     }
-}
-
-#search-result {
-    z-index: 20;
 }
 
 .auction-card:hover {
@@ -110,7 +102,6 @@ html, body {
     gap: 1em;
     border: none;
     margin: 1em auto;
-    z-index: 20;
 
     img {
         max-width: 30%;
@@ -127,15 +118,10 @@ html, body {
     }
 }
 
-#searchButton {
-    z-index: 20;
-}
-
 .search-container {
     display: flex;
     flex-direction: column;
     max-width: 70%;
-    z-index: 40;
     margin: 0 auto;
 
     .button {
@@ -147,13 +133,12 @@ html, body {
 .search-container:hover {
     .button {
         color: white;
-        background-color: $secondary-colour;
+        // background-color: $secondary-colour;
     }
 }
 
 .explore-content {
     margin-bottom: 4em;
-    z-index: 20;
 }
 
 .attribute-container {
@@ -169,7 +154,6 @@ html, body {
 input[type="text"], textarea {
     background-color: $background-colour;
     color: $main-colour;
-    z-index: 20;
 }
 
 input[type="text"]:focus, textarea:focus, input[type="text"]:hover, textarea:hover {
